--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li><a href="#about">About</a></li>
         <li><a href="#work">Work</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="https://www.w3schools.com/" target="_blank">Resume</a></li>
+        <li><a href="./assets/images/Resume_ThangNguyen.pdf" target="_blank">Resume</a></li>
       </ul>
       <div class="mobileview">
         <div class="line1"></div>
