added image icon files to image folder, updated work content in html and css file

--- a/index.html
+++ b/index.html
@@ -28,11 +28,7 @@
         <div class="line3"></div>
       </div>
     </nav>
-    <!-- <div class="background">
-      <img src="./assets/images/background.jpg" alt="Blue Background">
-  </div> -->
   </header>
-
   <main>
     <section id="about">
         <h2>About</h2>
@@ -43,31 +39,54 @@
     </section>
     <section id="work">
         <h2>Work</h2>
+        <content class="container">
         <div class="Project1">
           <a href="#1">
-          <img src="./assets/images/patrick.jpg" alt="Project 1" style="width:42px;height:42px;">
-          </a>
+          <img src="./assets/images/patrick.jpg" alt="Project 1" style="width:442px;height:442px;">
+          <div class="overlay1">
+          <div class="text">Project 1</div>
         </div>
+         </a>
+        </div>
+        <div class="fouricons">
+        <content class="container1">
         <div class="Project2">
           <a href="#2">
-          <img src="./assets/images/patrick.jpg" alt="Project 2" style="width:42px;height:42px;">
+          <img src="./assets/images/patrick.jpg" alt="Project 2" style="width:221px;height:221px;">
+          <div class="overlay1">
+           <div class="text">Project 2</div>
+          </div>
           </a>
         </div>
         <div class="Project3">
           <a href="#3">
-          <img src="./assets/images/patrick.jpg" alt="Project 3" style="width:42px;height:42px;">
+          <img src="./assets/images/patrick.jpg" alt="Project 3" style="width:221px;height:221px;">
+          <div class="overlay1">
+            <div class="text">Project 3</div>
+          </div>
           </a>
         </div>
+        </content>
+        <content class="container2">
         <div class="Project4">
           <a href="#4">
-          <img src="./assets/images/patrick.jpg" alt="Project 4" style="width:42px;height:42px;">
-          </a>
+          <img src="./assets/images/patrick.jpg" alt="Project 4" style="width:221px;height:221px;">
+          <div class="overlay1">
+            <div class="text">Project 4</div>
+          </div>
+        </a>
         </div>
         <div class="Project5">
           <a href="#5">
-          <img src="./assets/images/patrick.jpg" alt="Project 5" style="width:42px;height:42px;">
-          </a>
+          <img src="./assets/images/patrick.jpg" alt="Project 5" style="width:221px;height:221px;">
+          <div class="overlay1">
+            <div class="text">Project 5</div>
+          </div>
+        </a>
         </div>
+        </content>
+        </div>
+        </content>
     </section>
     <section id="contact">
         <h2>Contact</h2>
@@ -80,8 +99,6 @@
         <div></div>
     </section>
   </main>
-
-
   <script src="./assets/script.js"></script>
 </body>
 </html>
