updated readme file, added new placeholder images, and updated links in the webpage

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         <h2>Work</h2>
         <content class="container">
         <div class="Project1">
-          <a href="#1">
-          <img src="./assets/images/patrick.jpg" alt="Project 1" style="width:442px;height:442px;">
+          <a href="https://thangnt336.github.io/Code_Refractor/"target="_blank">
+          <img src="./assets/images/Image1.png" alt="Code Refractor" style="width:525px;height:300px;">
           <div class="overlay1">
-          <div class="text">Project 1</div>
+          <div class="text">Code Refractor</div>
         </div>
          </a>
         </div>
@@ -52,7 +52,7 @@
         <content class="container1">
         <div class="Project2">
           <a href="#2">
-          <img src="./assets/images/patrick.jpg" alt="Project 2" style="width:221px;height:221px;">
+          <img src="./assets/images/Image1.png" alt="Project 2" style="width:262px;height:150px;">
           <div class="overlay1">
            <div class="text">Project 2</div>
           </div>
@@ -60,7 +60,7 @@
         </div>
         <div class="Project3">
           <a href="#3">
-          <img src="./assets/images/patrick.jpg" alt="Project 3" style="width:221px;height:221px;">
+          <img src="./assets/images/Image1.png" alt="Project 3" style="width:262px;height:150px;">
           <div class="overlay1">
             <div class="text">Project 3</div>
           </div>
@@ -70,7 +70,7 @@
         <content class="container2">
         <div class="Project4">
           <a href="#4">
-          <img src="./assets/images/patrick.jpg" alt="Project 4" style="width:221px;height:221px;">
+          <img src="./assets/images/Image1.png" alt="Project 4" style="width:262px;height:150px;">
           <div class="overlay1">
             <div class="text">Project 4</div>
           </div>
@@ -78,7 +78,7 @@
         </div>
         <div class="Project5">
           <a href="#5">
-          <img src="./assets/images/patrick.jpg" alt="Project 5" style="width:221px;height:221px;">
+          <img src="./assets/images/Image1.png" alt="Project 5" style="width:262px;height:150px;">
           <div class="overlay1">
             <div class="text">Project 5</div>
           </div>
