fixed email address

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <h2>Contact</h2>
       <ul class="contactLinks">
         <li>336-862-0035</li>
-        <li><a href="mailto: thangnt336@gmail.com">thangnt@gmail.com</a></li>
+        <li><a href="mailto: thangnt336@gmail.com">thangnt336@gmail.com</a></li>
         <li><a href="https://github.com/thangnt336/" target="_blank">Github</a></li>
         <li><a href="https://www.linkedin.com/in/thangtnguyen" target="_blank">LinkedIn</a></li>
       </ul>
