send links to open in new tabs

--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
       <content class="container3">
         <h4 class="repository" onclick="openList1()">View Repositories</h4>
         <ol id="ollist" style="display: none">
-          <li><a href="https://github.com/thangnt336/-tock-News">/$tock News</a></li>
-          <li><a href="https://github.com/thangnt336/Weather-Dashboard">/Weather Dashboard</a></li>
-          <li><a href="https://github.com/thangnt336/Code-Quiz">/Coding Quiz</a></li>
-          <li><a href="https://github.com/thangnt336/Password-Generator">/Password Generator</a></li>
-          <li><a href="https://github.com/thangnt336/Work-Day-Scheduler">/Work Day Scheduler</a></li>
+          <li><a href="https://github.com/thangnt336/-tock-News" target="_blank">/$tock News</a></li>
+          <li><a href="https://github.com/thangnt336/Weather-Dashboard" target="_blank">/Weather Dashboard</a></li>
+          <li><a href="https://github.com/thangnt336/Code-Quiz" target="_blank">/Coding Quiz</a></li>
+          <li><a href="https://github.com/thangnt336/Password-Generator" target="_blank">/Password Generator</a></li>
+          <li><a href="https://github.com/thangnt336/Work-Day-Scheduler" target="_blank">/Work Day Scheduler</a></li>
         </ol>
       </content>
     </section>
