--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <ul class="links">
         <li><a href="#about">About</a></li>
         <li><a href="#work">Projects</a></li>
+        <li><a href="#resume">Resume</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="./assets/images/ResumeThang.pdf" target="_blank">Resume</a></li>
       </ul>
       <div class="mobileview">
         <div class="line1"></div>
@@ -106,6 +106,16 @@
       </content>
     </section>
 
+    <section id="resume">
+      <h2>Resume</h2>
+      <div class="resumeStyle">
+        <h4 class="repository" onclick="openResume()">View Resume</h4>
+        <h4><a href="./assets/images/ResumeThang.pdf" target="_blank">Download Resume</a></h4>
+        <p id="resumePreview" style="display: none">
+          <img src="./assets/images/ResumeThang.png" alt="resume"> </p>
+      </div>
+        
+    </section>
 
     <section id="contact">
       <h2>Contact</h2>
@@ -116,6 +126,7 @@
         <li><a href="https://www.linkedin.com/in/thangtnguyen" target="_blank">LinkedIn</a></li>
       </ul>
     </section>
+
   </main>
   <script src="./assets/script.js"></script>
 </body>
